src/objects/IPM_Project__c.object
<CustomObject>
    <description>Used by the IPM project.</description>
    <fields>
        <fullName>BETCurrentStatus__c</fullName>
        <label>BET Current Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BET_Archive_Status__c</fullName>
        <description>To store BET status when BET is archived (first release, final release, unreleased).</description>
        <label>BET Archive Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BET_Archived_BET_Text__c</fullName>
        <description>To store the BET name of the last archived BET.</description>
        <label>BET Archived BET Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BET_Archived_BET__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds the reference to archived BET.</description>
        <label>BET Archived BET</label>
        <referenceTo>uw_BET__c</referenceTo>
        <relationshipLabel>IPM Projects (Archived BET)</relationshipLabel>
        <relationshipName>IPM_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BET_Archived_Date__c</fullName>
        <description>To store the date when associated BET is archived.</description>
        <label>BET Archived Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BET_Denied_BET_Link__c</fullName>
        <description>To store BET for which approval was denied.</description>
        <label>BET Denied BET Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BET_Final_Release_Missed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is set when the Final Release BET milestone is missed.</description>
        <label>BET Final Release Missed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BET_First_Release_Chatter_Post__c</fullName>
        <label>BET First Release Chatter Post</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BET_First_Release_Missed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox signifies that BET Milestone has been missed and subsequently an Alert message is shown on Project Milestone &amp; ToDo page.</description>
        <label>BET First Release Missed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BET_First_Release_Previous_Value__c</fullName>
        <label>BET First Release Previous Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BET_Last_BET__c</fullName>
        <description>To capture the last BET name.</description>
        <label>Last BET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BET_Link_Requested__c</fullName>
        <description>To store the existing BET selected for linking.</description>
        <label>BET Link Requested</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BET_Link_Requested_on_Date__c</fullName>
        <description>To store the date on which existing BET link is requested or BET is selected to link.</description>
        <label>BET Link Requested on Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BET_MS_Final_Release_Date__c</fullName>
        <description>To store the final release BET milestone due date as per BET Final Release Date.</description>
        <label>BET MS Final Release Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.Name</field>
            <operation>contains</operation>
            <value>BET</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Milestone__c.Name</field>
            <operation>contains</operation>
            <value>Final</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Milestone__c.Name</field>
            <operation>contains</operation>
            <value>Release</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Type_of_Milestone__c</field>
            <operation>equals</operation>
            <value>BET</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BET_MS_First_Release_Date__c</fullName>
        <description>To store the first release BET milestone due date as per BET First Release Date.</description>
        <label>BET MS First Release Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Name__c</field>
            <operation>contains</operation>
            <value>BET</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Name__c</field>
            <operation>contains</operation>
            <value>First</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Name__c</field>
            <operation>contains</operation>
            <value>Release</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Type_of_Milestone__c</field>
            <operation>equals</operation>
            <value>BET</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BET_Status__c</fullName>
        <formula>if( 
 (ISBLANK(BET__c)|| ISNULL(BET__c)),
  false,
  true
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BET Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BET_TLD_Final_Release_Date__c</fullName>
        <description>To store the final release BET milestone due date as per Project Target Launch Date.</description>
        <label>BET TLD Final Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BET_TLD_First_Release_Date__c</fullName>
        <description>To store the first release BET milestone due date as per Project Target Launch Date.</description>
        <label>BET TLD First Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BET_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if BET is updated.</description>
        <label>BET Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BET__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store BET linked to the project.</description>
        <label>BET</label>
        <referenceTo>uw_BET__c</referenceTo>
        <relationshipLabel>IPM Projects</relationshipLabel>
        <relationshipName>IPM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BET_isNull__c</fullName>
        <description>This field will advice if BET__c is null or not</description>
        <formula>IF( ISBLANK(BET__c) , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will advice if BET is null or not</inlineHelpText>
        <label>BET_isNull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI__c</fullName>
        <description>BI Value from IPM Finance record</description>
        <label>BI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_BET_Member_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To store the boolean value to show whether BET member request is in bulk.</description>
        <label>Bulk BET Member Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CharterRiskIdentified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CharterRiskIdentified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractRiskIdentified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContractRiskIdentified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if any error occurs.</description>
        <label>Created in error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deputy_Project_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related user.</description>
        <label>Deputy Project Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_Idea__c</fullName>
        <label>Duration @Idea</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EcoDesign_Sync_Error__c</fullName>
        <description>To capture the error if it occurs during ecodesign sync.</description>
        <label>EcoDesign Sync Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EcoDesign_Sync_Status__c</fullName>
        <description>To capture the ecodesign sync status.</description>
        <label>EcoDesign Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exempt_from_Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To store the Exempt from Threshold value.</description>
        <label>Exempt from Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fetch_Timestamp_Mulesoft__c</fullName>
        <description>To fetch the date time when the ecodesign sync&apos;s to a project.</description>
        <label>Fetch Timestamp Mulesoft</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Sync_To_EcoDesign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked If the Project is Synced To EcoDesign For the first time. Indicates that the project has been synced to Ecodesign and any further updates can be synced to EcoDesign again.</description>
        <label>First Sync To EcoDesign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPMCompany__c</fullName>
        <description>To capture the company related to the project.</description>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>GIC HHC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GIC Hair Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIC Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIC Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIC Skin Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIC Deodorants &amp; Fragrances</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPMPlatform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Sample 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPMProjectBaseURL__c</fullName>
        <formula>Left($Api.Enterprise_Server_URL_350,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_350))) + &apos;apex/IPM_ProjectOverview?id=&apos;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPMProject_Span__c</fullName>
        <description>To capture the span of project.</description>
        <label>Project Span</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPMProject_Type__c</fullName>
        <description>To capture the type of project.</description>
        <label>Project Type (OLD)</label>
        <picklist>
            <picklistValues>
                <fullName>Original</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPMRegion__c</fullName>
        <description>To capture the region of the project.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Actual_Launch_Date__c</fullName>
        <description>The date on which project was actually launched.</description>
        <label>Actual Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Actual_Launch_Month__c</fullName>
        <description>The month in which project was actually launched.</description>
        <formula>CASE(MONTH( IPM_Actual_Launch_Date__c ), 

1, &quot;January&quot;, 

2, &quot;February&quot;, 

3, &quot;March&quot;, 

4, &quot;April&quot;, 

5, &quot;May&quot;, 

6, &quot;June&quot;, 

7, &quot;July&quot;, 

8, &quot;August&quot;, 

9, &quot;September&quot;, 

10, &quot;October&quot;, 

11, &quot;November&quot;, 

12, &quot;December&quot;, 

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Launch Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Actual_Launch_Year__c</fullName>
        <description>The year in which project was actually launched.</description>
        <formula>TEXT(YEAR( IPM_Actual_Launch_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Launch Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Answer_of_Q1__c</fullName>
        <description>To store the project parameter value in this case Market Place Activity.</description>
        <label>Market Place Activity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Answer_of_Q2__c</fullName>
        <description>To store the project parameter value in this case Consumer Value Perception.</description>
        <label>Consumer Value Perception</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Answer_of_Q3__c</fullName>
        <description>To store the project parameter value in this case Enabling Technology.</description>
        <label>Enabling Technology</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Approver_of_Charter__c</fullName>
        <description>To capture the approver of charter gate.</description>
        <label>Approver of Charter</label>
        <picklist>
            <picklistValues>
                <fullName>CCVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCLT Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Approver_of_Contract_Market_Ready__c</fullName>
        <description>To capture the approver of Contract &amp; Market Ready gates.</description>
        <label>Approver of Contract &amp; Market Ready</label>
        <picklist>
            <picklistValues>
                <fullName>RCLT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCLT &amp; RCLT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_BET_Toolkit__c</fullName>
        <description>Used in integration of toolkit</description>
        <label>IPM BET Toolkit</label>
        <picklist>
            <picklistValues>
                <fullName>Create new BET</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Link to existing BET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No BET</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Batch_Initiate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the batch is initiated.</description>
        <label>IPM Batch Initiate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscard_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To tell whether bosscard is available for the project.</description>
        <label>Bosscard Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Bosscard.</description>
        <label>Bosscard</label>
        <referenceTo>IPM_Bosscard__c</referenceTo>
        <relationshipLabel>IPM Projects</relationshipLabel>
        <relationshipName>IPM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Brand_Positioning__c</fullName>
        <description>To capture the brand of product for the project.</description>
        <label>Brand Positioning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Brand__c</fullName>
        <description>To capture the brand.</description>
        <label>IPM_Brand</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Business_Partner_User_Full_Name__c</fullName>
        <formula>IPM_Company_Card__r.IPM_Business_Partner__r.FirstName + &apos; &apos; + IPM_Company_Card__r.IPM_Business_Partner__r.LastName</formula>
        <label>Business Partner User Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Business_Partner_User_Name__c</fullName>
        <description>To capture the name of the business partner.</description>
        <formula>IPM_Company_Card__r.IPM_Business_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Partner User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CPP_Change_Reason__c</fullName>
        <description>To store the reason for change in the company project priority(CPP).</description>
        <label>CPP Change Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_CPP__c</fullName>
        <description>To store the company project priority.</description>
        <label>Company Project Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_CancelStoppingProjectTill__c</fullName>
        <label>Cancel Stopping Project Till</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPM_Capability_Approval_Date__c</fullName>
        <description>This is the rollup summary field which will store &apos;Completed On&apos; of Market Ready gate milestone.</description>
        <label>IPM Capability Approval Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Completed_On__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Phase__c</field>
            <operation>equals</operation>
            <value>Capability</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IPM_Category_Group__c</fullName>
        <description>To capture the category of the project.</description>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>Home Care</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Category_Icon__c</fullName>
        <description>To store the category icon details.</description>
        <formula>IF(IPM_Category_Text__c = &apos;Tea and Soy &amp; Fruit Beverages&apos; || IPM_Category_Text__c = &apos;BEVERAGES&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_beverages.png&apos;,&apos;BEVERAGES&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Deodorants &amp; Fragrances&apos; || IPM_Category_Text__c = &apos;Deodorants &amp; Fragrances&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_deo.png&apos;,&apos;DEO&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Dressings&apos; || IPM_Category_Text__c = &apos;DRESSINGS&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_dressings.png&apos;,&apos;DRESSINGS&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Hair Care&apos; || IPM_Category_Text__c = &apos;HAIR CARE&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_hair.png&apos;,&apos;HAIR&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Home Care&apos; || IPM_Category_Text__c = &apos;HOME CARE&apos; , 
IMAGE(&apos;/resource/IPM_Resource/images/category_homecare.png&apos;,&apos;HOMECARE&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Ice Cream&apos; || IPM_Category_Text__c = &apos;ICE CREAM&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_icecream.png&apos;,&apos;ICECREAM&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Laundry&apos; || IPM_Category_Text__c = &apos;LAUNDRY&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_laundry.png&apos;,&apos;LAUNDRY&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;ORAL CARE&apos; || IPM_Category_Text__c = &apos;Oral Care&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_oral.png&apos;,&apos;ORAL&apos;,21,21), 
IF( IPM_Category_Text__c = &apos;Savoury&apos; || IPM_Category_Text__c = &apos;Savoury&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_savoury.png&apos;,&apos;SAVOURY&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Skin Care&apos; || IPM_Category_Text__c = &apos;SKIN CARE&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_skincare.png&apos;,&apos;SKINCARE&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Skin Cleansing&apos; || IPM_Category_Text__c = &apos;SKIN CLEANSING&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_skincleansing.png&apos;,&apos;SKINCLEANSING&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Spreads&apos; || IPM_Category_Text__c = &apos;SPREADS&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_spreads.png&apos;,&apos;SPREADS&apos;,21,21), 
IF(IPM_Category_Text__c = &apos;Household Care&apos; || IPM_Category_Text__c = &apos;HOUSEHOLD CARE&apos; || IPM_Category_Text__c = &apos;HHC&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_HHC.png&apos;,&apos;HOUSEHOLD CARE&apos;,21,21),
&apos;&apos;)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Category Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Category_Picklist__c</fullName>
        <label>IPM Category Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tea and Soy &amp; Fruit Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deodorants &amp; Fragrances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Category_Platform__c</fullName>
        <label>IPM Category Platform</label>
        <picklist>
            <controllingField>IPM_Category_Picklist__c</controllingField>
            <picklistValues>
                <fullName>Engaging Experiences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodness of Soy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delicious Treats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revitalisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Authenticity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Hydration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Underdeveloped Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Establish Daily Habit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend Beyond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win with strong brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barriers &amp; trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruit next gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create relevance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maille</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand footprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maille boutique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben &amp; Jerrys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornetto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruttare/Solero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids (Max/Paddlepop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magnum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Systems Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carte D&apos;Or</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cremissimo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talenti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walls Impulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walls Desserts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Category_Text__c</fullName>
        <description>To store the category text.</description>
        <label>IPM Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Category_Thresh__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Holds Category Threshold depending on  Category group , Category , span .This value is populated during project creation.</description>
        <label>Category Threshold</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related category.</description>
        <label>IPM_Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>IPM Projects</relationshipLabel>
        <relationshipName>IPM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Child_Complexity__c</fullName>
        <description>To hold value for child project for complexity type</description>
        <label>IPM Child Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Child_Fast_Track_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hold value for child project fasttrack</description>
        <label>IPM Child Fast Track Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field for grouping of projects</description>
        <label>IPM Project Cluster</label>
        <referenceTo>IPM_Clusters__c</referenceTo>
        <relationshipLabel>IPM Projects</relationshipLabel>
        <relationshipName>IPM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Clustering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to map all objects to the Cluster project</description>
        <label>Clustering</label>
        <referenceTo>IPM_Project__c</referenceTo>
        <relationshipLabel>IPM Projects (Clustering)</relationshipLabel>
        <relationshipName>IPM_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Clusters__c</fullName>
        <description>To fill this formula field from IPM Cluster</description>
        <formula>IF(AND(ISPICKVAL(IPM_SourceProjectType__c,&apos;Original&apos;), IPM_CompanyCardText__c=&apos;Global Company Card&apos;),IF(ISPICKVAL(IPMProject_Span__c, &apos;Global&apos;),IPM_Cluster__r.IPM_Cluster_Name__c,IF(ISPICKVAL(IPMProject_Span__c, &apos;Regional&apos;),IPM_Parent_Project__r.IPM_Cluster__r.IPM_Cluster_Name__c,IF(ISPICKVAL(IPMProject_Span__c, &apos;Local&apos;),IPM_Parent_Project__r.IPM_Parent_Project__r.IPM_Cluster__r.IPM_Cluster_Name__c,&apos;&apos;))),IF(AND(ISPICKVAL(IPM_SourceProjectType__c,&apos;Original&apos;), IPM_CompanyCardText__c=&apos;Regional Company Card&apos;),IF(ISPICKVAL(IPMProject_Span__c, &apos;Regional&apos;),IPM_Cluster__r.IPM_Cluster_Name__c,IF(ISPICKVAL(IPMProject_Span__c, &apos;Local&apos;),IPM_Parent_Project__r.IPM_Cluster__r.IPM_Cluster_Name__c,&apos;&apos; ) ),&apos;&apos; ))</formula>
        <label>IPM Project Clusters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CompanyCardText__c</fullName>
        <description>To capture the Company Card Text.</description>
        <label>Source Company Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Company_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related company card.</description>
        <label>IPM Company Card</label>
        <referenceTo>IPM_Company_Card__c</referenceTo>
        <relationshipLabel>IPM Projects</relationshipLabel>
        <relationshipName>IPM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>